# aeterno

./: Cargo.toml  build.sh
design/: protocol-master-sys.md
samples/: master.toml
samples/services/: org.aeterno.test.hello-world.toml
src/: default_slave.rs  init.rs  master.rs  master_config.rs  master_slave_comm.rs  master_slave_shared.rs  sys.rs
