[package]
name = "aeterno"
version = "0.1.0"
authors = ["Levente Kurusa <lkurusa@acm.org>"]

[[bin]]
name = "aeterno-init"
path = "src/init.rs"

[[bin]]
name = "aeterno-sys"
path = "src/sys.rs"

[features]
default = []
local-testing = []

[dependencies]
nix = "0.11.0"
log = "0.4.6"
env_logger = "0.5.13"
